syntax = "proto3";

package intr.v1;
option go_package = "/intr/v1;intrv1";

service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Collect(CollectRequest) returns (CollectResponse);
  rpc CancelCollect(CancelCollectRequest) returns (CancelCollectResponse);
  rpc  Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {
  // 有些公司的规范
  // Code
  // Msg
  // Data
}

message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message LikeResponse {
}

message CancelLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message CancelLikeResponse {

}

message CollectRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 cid = 3;
  int64 uid = 4;
}

message CollectResponse {

}

message CancelCollectRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message CancelCollectResponse {

}

message GetRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetResponse {
  Interactive intr = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 biz_ids = 2;
}

message GetByIdsResponse {
  map<int64, Interactive> intrs = 1;
}